--- a/tasks/templates/dashboard/dashboard.html
+++ b/tasks/templates/dashboard/dashboard.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>{% block title %}{% endblock title %}</title>
+    <link rel="stylesheet" href="{% static "css/output.css" %}">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +21,7 @@
   </head>
   <body class="bg-gray-50 p-6">
     <div class="max-w-[1400px] mx-auto">
-      <!-- Header  -->
+      {% comment %}  Header   {% endcomment %}
       <header class="flex justify-between items-center mb-8">
         <h1 class="text-2xl font-semibold">Dashboard</h1>
         <div class="flex items-center gap-4">
@@ -48,9 +50,9 @@
       </header>
 
       <main>
-        <!-- Stats Grid  -->
+        {% comment %} Stats Grid   {% endcomment %}
         <div class="grid grid-cols-4 gap-6 mb-8">
-          <!-- Total Task  -->
+           {% comment %} Total Task   {% endcomment %}
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <h3 class="text-sm font-medium text-gray-500 mb-4">TOTAL TASK</h3>
             <div class="flex justify-between items-start">
@@ -76,7 +78,7 @@
               </div>
             </div>
           </div>
-          <!-- Completed Task  -->
+           {% comment %} Completed Task   {% endcomment %}
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <h3 class="text-sm font-medium text-gray-500 mb-4">
               COMPLETED TASK
@@ -104,7 +106,7 @@
               </div>
             </div>
           </div>
-          <!-- Task In Progress  -->
+           {% comment %} Task In Progress   {% endcomment %}
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <h3 class="text-sm font-medium text-gray-500 mb-4">
               TASK IN PROGRESS
