--- a/tasks/templates/dashboard/user_dashboard.html
+++ b/tasks/templates/dashboard/user_dashboard.html
@@ -1,9 +1,9 @@
        
 {% extends "dashboard/dashboard.html" %}
-
+{% block title %}User Dashboard{% endblock title %}
 {% block tasks %}
        
-       <!-- Task Table  -->
+        {% comment %} Task Table   {% endcomment %}
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
           <div class="bg-white p-6 rounded-lg shadow">
