Django Task-Form Design and Mixin use

--- a/tasks/templates/task_form.html
+++ b/tasks/templates/task_form.html
@@ -1,20 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static "css/output.css" %}">
+
 </head>
 <body>
-    <div>
-        {% if message %}
-            <p>{{message}}</p>
-        {% endif %}
+    <div class="w-1/2 mx-auto mt-8">
+        <div>
+            {% if message %}
+                <p>{{message}}</p>
+            {% endif %}
+        </div>
+        <form action="" method="POST">
+            {% comment %} <input type="text" class="border-2 border-gray-300 w-full rounded-lg shadow-sm focus:border-rose-500 focus:ring-rose-500" placeholder="Enter Task Title"> {% endcomment %}
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="mb-5 bg-rose-500 px-3 py-2 mt-2 rounded-md">Submit</button>
+        </form>
     </div>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
-    </form>
 </body>
 </html>
