--- a/tasks/templates/dashboard/dashboard.html
+++ b/tasks/templates/dashboard/dashboard.html
@@ -57,7 +57,7 @@
             <h3 class="text-sm font-medium text-gray-500 mb-4">TOTAL TASK</h3>
             <div class="flex justify-between items-start">
               <div>
-                <p class="text-3xl font-semibold mb-1">3</p>
+                <p class="text-3xl font-semibold mb-1">{{total_task}}</p>
                 <p class="text-gray-500 text-sm">11 last month</p>
               </div>
               <div class="bg-blue-100 p-3 rounded-full">
@@ -85,7 +85,7 @@
             </h3>
             <div class="flex justify-between items-start">
               <div>
-                <p class="text-3xl font-semibold mb-1">1</p>
+                <p class="text-3xl font-semibold mb-1">{{completed_task}}</p>
                 <p class="text-gray-500 text-sm">11 last month</p>
               </div>
               <div class="bg-green-100 p-3 rounded-full">
@@ -113,7 +113,7 @@
             </h3>
             <div class="flex justify-between items-start">
               <div>
-                <p class="text-3xl font-semibold mb-1">1</p>
+                <p class="text-3xl font-semibold mb-1">{{in_progress_task}}</p>
                 <p class="text-gray-500 text-sm">11 last month</p>
               </div>
               <div class="bg-yellow-100 p-3 rounded-full">
@@ -138,7 +138,7 @@
             <h3 class="text-sm font-medium text-gray-500 mb-4">TODOS</h3>
             <div class="flex justify-between items-start">
               <div>
-                <p class="text-3xl font-semibold mb-1">1</p>
+                <p class="text-3xl font-semibold mb-1">{{pending_task}}</p>
                 <p class="text-gray-500 text-sm">11 last month</p>
               </div>
               <div class="bg-purple-100 p-3 rounded-full">
