--- a/tasks/templates/task_form.html
+++ b/tasks/templates/task_form.html
@@ -11,15 +11,18 @@
 <body>
     <div class="w-1/2 mx-auto mt-8">
         <div>
-            {% if message %}
-                <p>{{message}}</p>
+            {% if messages %}
+                {% for message in  messages%}
+                    <div class="px-2 py-1 {% if message.tags == 'success' %}bg-green-500{% endif %}">{{message}}</div>
+                {% endfor %}
             {% endif %}
         </div>
         <form action="" method="POST">
             {% comment %} <input type="text" class="border-2 border-gray-300 w-full rounded-lg shadow-sm focus:border-rose-500 focus:ring-rose-500" placeholder="Enter Task Title"> {% endcomment %}
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="mb-5 bg-rose-500 px-3 py-2 mt-2 rounded-md">Submit</button>
+            {{ task_form }}
+            {{ task_detail_form }}
+            <button type="submit" class="mb-5 bg-rose-500 text-white px-3 py-2 mt-2 rounded-md">Submit</button>
         </form>
     </div>
 </body>
