--- a/tasks/templates/dashboard/manager_dashboard.html
+++ b/tasks/templates/dashboard/manager_dashboard.html
@@ -20,7 +20,12 @@
           <div class="flex items-center gap-2">
             <div class="w-2 h-2 rounded-full bg-green-500"></div>
             <span>{{task.title}}</span>
-            <button class="px-2 py-1 bg-green-500">Edit</button>
+            <a href='{% url "update-task" task.id %}' class="px-2 py-1 bg-green-500">Edit</a>
+            {% comment %} <a href='{% url "delete-task" task.id %}' class="px-2 py-1 bg-red-500">Delete</a> {% endcomment %}
+             <form action="{% url 'delete-task' task.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="px-2 py-1 bg-red-500">Delete</button>
+             </form>
           </div>
           <div>
             <span
