Environment variable, Sending User activation mail Implemented

--- a/tasks/templates/dashboard/dashboard.html
+++ b/tasks/templates/dashboard/dashboard.html
@@ -143,7 +143,7 @@
           {% comment %} TODOS   {% endcomment %}
           <a href="{% url 'manager-dashboard' %}?type=pending">
             <div class="bg-white rounded-xl p-6 shadow-sm">
-              <h3 class="text-sm font-medium text-gray-500 mb-4">TODOS</h3>
+              <h3 class="text-sm font-medium text-gray-500 mb-4">PENDING TASKS</h3>
               <div class="flex justify-between items-start">
                 <div>
                   <p class="text-3xl font-semibold mb-1">{{counts.pending}}</p>
