--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -31,7 +31,8 @@
                     {% endif %}
                 </p>
             {% endfor %}
-            <button type="submit">Sign Up</button>
+            <br>
+            <button class='bg-rose-500 px-2 py-1 rounded-sm' type="submit">Sign Up</button>
         </form>
     </div>
 </body>
