--- a/users/templates/admin/dashboard.html
+++ b/users/templates/admin/dashboard.html
@@ -11,17 +11,17 @@
     <header class="bg-white shadow-md">
       <nav class="container mx-auto px-6 py-3">
         <div class="flex justify-between items-center">
-          <a href="index.html" class="text-xl font-bold text-gray-800"
+          <a href="{% url 'home' %}" class="text-xl font-bold text-gray-800"
             >Task-Manage</a
           >
           <div class="hidden md:flex space-x-4">
             <a
-              href="admin-dashboard.html"
+              href="{% url 'admin-dashboard' %}"
               class="text-gray-600 hover:text-gray-800"
               >Dashboard</a
             >
-            <a href="#" class="text-gray-600 hover:text-gray-800">Tasks</a>
-            <a href="group-list.html" class="text-gray-600 hover:text-gray-800"
+            <a href="{% url 'view-task' %}" class="text-gray-600 hover:text-gray-800">Tasks</a>
+            <a href="{% url 'group-list' %}" class="text-gray-600 hover:text-gray-800"
               >Groups</a
             >
             <a
@@ -47,11 +47,12 @@
                 class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-1 hidden"
               >
                 <a
-                  href="manager-dashboard.html"
+                  href="{% url 'admin-dashboard' %}"
                   class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   >Dashboard</a
                 >
-                <form method="post" action="logout.html">
+                <form method="post" action="{% url 'logout' %}">
+                  {% csrf_token %}
                   <button
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   >
