Frontend and dynamic dashboard Implemented

--- a/tasks/templates/dashboard/manager_dashboard.html
+++ b/tasks/templates/dashboard/manager_dashboard.html
@@ -1,9 +1,10 @@
 {% extends "dashboard/dashboard.html" %}
 {% block title %}Manager Dashboard{% endblock title %}
+
 {% block tasks %}
 
  {% comment %} Task Table   {% endcomment %}
-<div class="bg-white rounded-xl shadow-sm">
+<div class="bg-white rounded-xl shadow-sm mb-11">
   <div
     class="grid grid-cols-4 p-4 border-b border-gray-100 text-sm text-gray-500"
   >
@@ -19,7 +20,7 @@
         <div class="grid grid-cols-4 gap-4 p-4 items-center">
           <div class="flex items-center gap-2">
             <div class="w-2 h-2 rounded-full bg-green-500"></div>
-            <span>{{task.title}}</span>
+            <a href="{% url 'task-details' task.id%}">{{task.title}}</a>
             <a href='{% url "update-task" task.id %}' class="px-2 py-1 bg-green-500">Edit</a>
             {% comment %} <a href='{% url "delete-task" task.id %}' class="px-2 py-1 bg-red-500">Delete</a> {% endcomment %}
              <form action="{% url 'delete-task' task.id %}" method="post">
@@ -38,7 +39,7 @@
               <div
               class="w-8 h-8 rounded-full bg-blue-500 flex items-center justify-center text-white text-sm border-2 border-white"
               >
-                {{emp.name|slice:':1'}}
+                {{emp.first_name|slice:':1'}}
               </div>
             {% endfor %}
           </div>
