--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,15 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/output.css' %}">
-</head>
-<body>
-    <h1>Log In</h1>
-    <div> 
+{% extends "base.html" %}
+{% block content %}
+    <br>
+    <div class='mx-auto w-1/2 my-9'> 
+        <h2 class="underline mx-auto my-2">SIGN-IN</h2>
         {% if messages %}
             {% for message in  messages%}
                 <div class="px-2 py-1 {% if message.tags == 'success' %}bg-green-500{% endif %}">{{message}}</div>
@@ -18,9 +11,10 @@
         <form action="" method="post">
             {% csrf_token %}
             {{form}}
-            <br>
-            <button class='bg-rose-500 px-2 py-1 rounded-sm' type="submit">Sign In</button>
+            {% comment %} <br> {% endcomment %}
+            <button class='bg-blue-500 px-2 py-1 rounded text-white mt-4' type="submit">Sign In</button>
         </form>
     </div>
-</body>
-</html>
+    <br>
+
+{% endblock content %}
