--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,15 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href=" {% static 'css/output.css' %} ">
-</head>
-<body>
-    <h1>Welcome to Authentication System</h1>
-    <div> 
+{% extends "base.html" %}
+{% block content %}
+    
+    <div class='mx-auto w-1/2 my-9'> 
+        <h2 class="underline mx-auto my-2">SIGN-UP</h2>
         {% if form.non_field_errors %}
             {% for error in form.non_field_errors %}
                 {{error}}
@@ -31,9 +24,8 @@
                     {% endif %}
                 </p>
             {% endfor %}
-            <br>
-            <button class='bg-rose-500 px-2 py-1 rounded-sm' type="submit">Sign Up</button>
+            <button class='bg-blue-500 px-2 py-1 rounded text-white mt-3' type="submit">Sign Up</button>
         </form>
     </div>
-</body>
-</html>
+
+    {% endblock content %}
