--- a/users/templates/admin/dashboard.html
+++ b/users/templates/admin/dashboard.html
@@ -20,7 +20,8 @@
               class="text-gray-600 hover:text-gray-800"
               >Dashboard</a
             >
-            
+            <a href="{% url 'view-task' %}" class="text-gray-600 hover:text-gray-800" >Tasks</a>
+            <a href="{% url 'view-project' %}" class="text-gray-600 hover:text-gray-800" >Projects</a>
             <a href="{% url 'group-list' %}" class="text-gray-600 hover:text-gray-800"
               >Groups</a
             >
