Login,Logout,Profile Views & Password Change Implemented

--- a/core/templates/logged_nav.html
+++ b/core/templates/logged_nav.html
@@ -29,6 +29,11 @@
                   Logout
                 </button>
               </form>
+              <a
+              href="{% url 'profile' %}"
+              class="bg-blue-500 block px-4 py-2 text-sm text-white rounded ml-3"
+              >Profile</a
+            > 
         </div>
       </div>
       
