--- a/users/templates/admin/dashboard.html
+++ b/users/templates/admin/dashboard.html
@@ -41,8 +41,12 @@
                   Logout
                 </button>
               </form>
-              
             </div>
+            <a
+              href="{% url 'profile' %}"
+              class="bg-blue-500 block px-4 py-2 text-sm text-white rounded ml-3"
+              >Profile</a
+            > 
           </div>
         </div>
         
