--- a/users/templates/registration/reset_password.html
+++ b/users/templates/registration/reset_password.html
@@ -12,9 +12,8 @@
             {% csrf_token %}
             {{form}}
             {% comment %} <br> {% endcomment %}
-            <button class='bg-blue-500 px-2 py-1 rounded text-white mt-4' type="submit">Sign In</button>
+            <button class='bg-blue-500 px-2 py-1 rounded text-white mt-4' type="submit">Submit</button>
         </form>
-        <p><a href="{% url 'password-reset' %}">Forgot Password?</a></p>
     </div>
     <br>
 
