Custom role based accessed Implemented

--- a/core/templates/logged_nav.html
+++ b/core/templates/logged_nav.html
@@ -11,10 +11,10 @@
             >Dashboard</a
           >
           
-            <a href="{% url 'view-task' %}" class="text-gray-600 hover:text-gray-800">Tasks</a>
+            <a href="{% url 'can_view_task' %}" class="text-gray-600 hover:text-gray-800">Tasks</a>
             {% comment %} <a href="{% url 'view-project' %}" class="text-gray-600 hover:text-gray-800">Projects</a> {% endcomment %}
             <a
-              href="{% url 'create-task' %}"
+              href="{% url 'can_add_task' %}"
               class="text-gray-600 hover:text-gray-800"
               >Create Task</a
             > 
