--- a/tasks/templates/task_form.html
+++ b/tasks/templates/task_form.html
@@ -1,14 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static "css/output.css" %}">
 
-</head>
-<body>
+
+
+{% extends "admin/dashboard.html" %}
+{% block content %}
     <div class="w-1/2 mx-auto mt-8">
         <div>
             {% if messages %}
@@ -25,5 +19,5 @@
             <button type="submit" class="mb-5 bg-rose-500 text-white px-3 py-2 mt-2 rounded-md">Submit</button>
         </form>
     </div>
-</body>
-</html>
+{% endblock content %}
+
