--- a/tasks/templates/dashboard/user_dashboard.html
+++ b/tasks/templates/dashboard/user_dashboard.html
@@ -33,117 +33,46 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td class="py-2">
-                    <div class="flex items-center">
+                {% for task in tasks %}
+                  <tr>
+                    <td class="py-2">
+                      <div class="flex items-center">
+                        <span
+                          class="w-2 h-2 bg-green-500 rounded-full mr-2"
+                        ></span>
+                        <span>{{task.title}}</span>
+                      </div>
+                    </td>
+                    <td class="py-2">
                       <span
-                        class="w-2 h-2 bg-green-500 rounded-full mr-2"
-                      ></span>
-                      <span>Test Low Task</span>
-                    </div>
-                  </td>
-                  <td class="py-2">
-                    <span
-                      class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-sm"
-                      >Low</span
-                    >
-                  </td>
-                  <td class="py-2">
-                    <div class="flex -space-x-2">
-                      <div
-                        class="w-6 h-6 rounded-full bg-blue-500 flex items-center justify-center text-white text-xs"
+                        class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-sm"
+                        >{{ task.details.get_priority_display }}
+                        </span
                       >
-                        CA
+                    </td>
+                    <td class="py-2">
+                      <div class="flex -space-x-2">
+                        <div
+                          class="w-6 h-6 rounded-full bg-blue-500 flex items-center justify-center text-white text-xs"
+                        >
+                          CA
+                        </div>
+                        <div
+                          class="w-6 h-6 rounded-full bg-green-500 flex items-center justify-center text-white text-xs"
+                        >
+                          JS
+                        </div>
+                        <div
+                          class="w-6 h-6 rounded-full bg-yellow-500 flex items-center justify-center text-white text-xs"
+                        >
+                          B
+                        </div>
                       </div>
-                      <div
-                        class="w-6 h-6 rounded-full bg-green-500 flex items-center justify-center text-white text-xs"
-                      >
-                        JS
-                      </div>
-                      <div
-                        class="w-6 h-6 rounded-full bg-yellow-500 flex items-center justify-center text-white text-xs"
-                      >
-                        B
-                      </div>
-                    </div>
-                  </td>
-                  <td class="py-2 text-sm text-gray-500">9 months ago</td>
-                </tr>
-                <tr>
-                  <td class="py-2">
-                    <div class="flex items-center">
-                      <span
-                        class="w-2 h-2 bg-yellow-500 rounded-full mr-2"
-                      ></span>
-                      <span>Test task</span>
-                    </div>
-                  </td>
-                  <td class="py-2">
-                    <span
-                      class="bg-gray-100 text-gray-800 px-2 py-1 rounded text-sm"
-                      >Normal</span
-                    >
-                  </td>
-                  <td class="py-2">
-                    <div class="flex -space-x-2">
-                      <div
-                        class="w-6 h-6 rounded-full bg-red-500 flex items-center justify-center text-white text-xs"
-                      >
-                        AJ
-                      </div>
-                      <div
-                        class="w-6 h-6 rounded-full bg-purple-500 flex items-center justify-center text-white text-xs"
-                      >
-                        EV
-                      </div>
-                      <div
-                        class="w-6 h-6 rounded-full bg-yellow-500 flex items-center justify-center text-white text-xs"
-                      >
-                        B
-                      </div>
-                    </div>
-                  </td>
-                  <td class="py-2 text-sm text-gray-500">9 months ago</td>
-                </tr>
-                <tr>
-                  <td class="py-2">
-                    <div class="flex items-center">
-                      <span class="w-2 h-2 bg-red-500 rounded-full mr-2"></span>
-                      <span>Test task</span>
-                    </div>
-                  </td>
-                  <td class="py-2">
-                    <span
-                      class="bg-red-100 text-red-800 px-2 py-1 rounded text-sm"
-                      >High</span
-                    >
-                  </td>
-                  <td class="py-2">
-                    <div class="flex -space-x-2">
-                      <div
-                        class="w-6 h-6 rounded-full bg-blue-500 flex items-center justify-center text-white text-xs"
-                      >
-                        CA
-                      </div>
-                      <div
-                        class="w-6 h-6 rounded-full bg-green-500 flex items-center justify-center text-white text-xs"
-                      >
-                        JS
-                      </div>
-                      <div
-                        class="w-6 h-6 rounded-full bg-red-500 flex items-center justify-center text-white text-xs"
-                      >
-                        AJ
-                      </div>
-                      <div
-                        class="w-6 h-6 rounded-full bg-yellow-500 flex items-center justify-center text-white text-xs"
-                      >
-                        B
-                      </div>
-                    </div>
-                  </td>
-                  <td class="py-2 text-sm text-gray-500">10 months ago</td>
-                </tr>
+                    </td>
+                    <td class="py-2 text-sm text-gray-500">{{task.created_at}}</td>
+                  </tr>
+                {% endfor %}
+                
               </tbody>
             </table>
           </div>
