--- a/users/templates/admin/user_list.html
+++ b/users/templates/admin/user_list.html
@@ -11,7 +11,7 @@
             <th
               class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
             >
-              Username
+              Name
             </th>
             <th
               class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
@@ -43,7 +43,8 @@
                     <td class="px-4 py-4 whitespace-nowrap">{{user.first_name}} {{user.last_name}}</td>
                     <td class="px-4 py-4 whitespace-nowrap">{{user.email}}</td>
                     <td class="px-4 py-4 whitespace-nowrap">{{user.id}}</td>
-                    <td class="px-4 py-4 whitespace-nowrap">{{user.group_name}}</td>
+                    <td class="px-4 py-4 whitespace-nowrap">{{ user.custom_role.role.name }}
+                    </td>
                     <td class="px-4 py-4 whitespace-nowrap">
                     <a
                         href="{% url 'assign-role' user.id %}"
