--- a/tasks/templates/show_task.html
+++ b/tasks/templates/show_task.html
@@ -1,4 +1,6 @@
 {% extends "dashboard/dashboard.html" %}
+{% block title %}Task show Bar{% endblock title %}
+
 {% block tasks %}
 
  {% comment %} Task Table   {% endcomment %}
