--- a/core/templates/non_logged_nav.html
+++ b/core/templates/non_logged_nav.html
@@ -31,12 +31,13 @@
         </div>
         <div class="flex gap-1">
           <a
-            href="{% url 'sign-in' %}"
+            href="{% url 'social:begin' 'auth0' %}?next={{ request.GET.next|urlencode }}"
             class="hidden md:block bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition duration-300"
             >Sign In</a
           >
+
           <a
-            href="{% url 'sign-up' %}"
+            href="{% url 'social:begin' 'auth0' %}?next={{ request.GET.next|urlencode }}"
             class="hidden md:block bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition duration-300"
             >Sign Up</a
           >
