--- a/tasks/templates/dashboard/dashboard.html
+++ b/tasks/templates/dashboard/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load task_tags %}
 {% block content %}
         
   <div class='w-[1450px] mx-auto'>
@@ -10,8 +11,13 @@
          <h3 class="text-sm font-medium text-gray-500 mb-4">TOTAL TASK</h3>
          <div class="flex justify-between items-start">
            <div>
-             <p class="text-3xl font-semibold mb-1">{{counts.total}}</p>
-             <p class="text-gray-500 text-sm">11 last month</p>
+            {% if user_role.name == 'User' %}
+              <p class="text-3xl font-semibold mb-1">{% task_count_by_status user %}</p>
+            {% else %}
+              <p class="text-3xl font-semibold mb-1">{{ counts.total }}</p>
+            {% endif %}
+
+            <p class="text-gray-500 text-sm">11 last month</p>
            </div>
            <div class="bg-blue-100 p-3 rounded-full">
              <svg
@@ -40,7 +46,11 @@
        </h3>
        <div class="flex justify-between items-start">
          <div>
-           <p class="text-3xl font-semibold mb-1">{{counts.completed}}</p>
+          {% if user_role.name == 'User' %}
+            <p class="text-3xl font-semibold mb-1">{% task_count_by_status user "COMPLETED"%}</p>
+          {% else %}
+            <p class="text-3xl font-semibold mb-1">{{ counts.total }}</p>
+          {% endif %}
            <p class="text-gray-500 text-sm">11 last month</p>
          </div>
          <div class="bg-green-100 p-3 rounded-full">
@@ -70,7 +80,11 @@
            </h3>
            <div class="flex justify-between items-start">
              <div>
-               <p class="text-3xl font-semibold mb-1">{{counts.in_progress}}</p>
+              {% if user_role.name == 'User' %}
+                <p class="text-3xl font-semibold mb-1">{% task_count_by_status user "IN_PROGRESS"%}</p>
+              {% else %}
+                <p class="text-3xl font-semibold mb-1">{{ counts.in_progress }}</p>
+              {% endif %}
                <p class="text-gray-500 text-sm">11 last month</p>
              </div>
              <div class="bg-yellow-100 p-3 rounded-full">
@@ -98,7 +112,11 @@
          <h3 class="text-sm font-medium text-gray-500 mb-4">PENDING TASKS</h3>
          <div class="flex justify-between items-start">
            <div>
-             <p class="text-3xl font-semibold mb-1">{{counts.pending}}</p>
+              {% if user_role.name == 'User' %}
+                <p class="text-3xl font-semibold mb-1">{% task_count_by_status user "PENDING"%}</p>
+              {% else %}
+                <p class="text-3xl font-semibold mb-1">{{ counts.pending }}</p>
+              {% endif %}
              <p class="text-gray-500 text-sm">11 last month</p>
            </div>
            <div class="bg-purple-100 p-3 rounded-full">
