--- a/users/templates/accounts/profile.html
+++ b/users/templates/accounts/profile.html
@@ -37,7 +37,7 @@
             />
             <div>
               <h2 class="text-2xl font-semibold text-gray-800">{{name}}</h2>
-              <p class="text-gray-600">Software Developer</p>
+              <p class="text-gray-600">{{user_role.name}}</p>
             </div>
           </div>
 
@@ -75,11 +75,11 @@
               Passionate software developer with 5 years of experience in web
               technologies. Loves to create user-friendly and efficient
               applications. In free time, enjoys hiking and reading tech blogs.
-            <p>{{ 3.14159|round_val:2 }}  </p>            {# 3.14 #}
+            {% comment %} <p>{{ 3.14159|round_val:2 }}  </p>            {# 3.14 #}
             <p>{{ 10|add:5 }}    </p>                     {# 15 #}
             <p>{{ 10|subtract:2 }}  </p>                  {# 8 #}
             <p>{{ 4|multiply:3 }}    </p>                 {# 12 #}
-            <p>{{ 10|divide:2 }} </p>                  {# 5.0 #}</p>
+            <p>{{ 10|divide:2 }} </p>                  {# 5.0 #}</p> {% endcomment %}
           </div>
         </div>
       </main>
