--- a/tasks/templates/dashboard/user_dashboard.html
+++ b/tasks/templates/dashboard/user_dashboard.html
@@ -46,7 +46,12 @@
                     <td class="py-2">
                       <span
                         class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-sm"
-                        >{{ task.details.get_priority_display }}
+                        >{% if task.details %}
+                          {{ task.details.get_priority_display }}
+                        {% else %}
+                          No priority
+                        {% endif %}
+                      
                         </span
                       >
                     </td>
